--- a/a11y_7.md
+++ b/a11y_7.md
@@ -25,7 +25,7 @@ What should be the h1 is marked up as h2. For example:
 #### Notes: All pages now have a relevant H1 heading :-)
 
 ### 2. GDL (affecting SE/SDI/BREXIT/SEP) - [skip/accessibility links truncated on Firefox.](https://scotent.leankit.com/card/835687002)
-Source of an issue is in GDL (tested on <https://se-qa-globaldesignlanguage.azurewebsites.net/test_package>)
+Source of an issue is in GDL (tested on QA environment)
 
 From some reason when accessing skip links on Firefox they appear truncated, see video for details on SE website as an example:
 
