--- a/_posts/2019-05-27-other.md
+++ b/_posts/2019-05-27-other.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: PRESENTATION OF POSITION SO FAR
-type: other
+type: partner
 phase: beta
 initials: mk
 display_date: 27th May 2019
