--- a/_posts/2019-06-06-A11Y.md
+++ b/_posts/2019-06-06-A11Y.md
@@ -1,22 +1,21 @@
 ---
 layout: post
 title: A11Y RESEARCH AND IMPROVEMENTS
-type: ally
+type: a11y
 phase: beta
 initials: mk
-display_date: 31st May 2019
+display_date: 6th June 2019
 ---
-
 
 **Audience**
 - Mix of A11Y Audit/Expert Review, and collation of issues from previous research rounds
 
 **Focus**
-- A11Y Improvements based on issues found during research
+- A11Y Improvements based on issues found during research implemnented over 2 sprints in June
 
 **Observations**
 - Not overly technical fix's
 - Lots of core usability issues that are accentuated for A11Y audiences
 
-
-[May 2019 A11Y fix's (PDF)](../files/SEP_2019_May_31_A11Y.pdf)
+[June 2019 A11Y fix list Sprint 6 (PDF)](../files/SEP_2019_may_31_A11Y_Sprint6.pdf)
+[June 2019 A11Y fix list Sprint 7 (PDF)](../files/SEP_2019_June_14_A11Y_Sprint7.pdf)
