--- a/_posts/2019-05-31-A11Y.md
+++ b/_posts/2019-05-31-A11Y.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: A11Y RESEARCH AND IMPROVEMENTS
-type: ally
+type: a11y
 phase: beta
 initials: mk
 display_date: 31st May 2019
