--- a/_posts/2019-08-12-partner.md
+++ b/_posts/2019-08-12-partner.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 title: Lab Research
-type: lab
+type: partner
 phase: beta
 initials: mk
-display_date: 22nd May 2019
+display_date: 9th Sep 2019
 ---
 **AUDIENCE**
 - PARTNERS
