--- a/_posts/2019-08-12-partner.md
+++ b/_posts/2019-08-12-partner.md
@@ -4,7 +4,7 @@ title: Lab Research
 type: partner
 phase: beta
 initials: mk
-display_date: 9th Sep 2019
+display_date: Week starting Aug 12th 2019
 ---
 **AUDIENCE**
 - PARTNERS
