--- a/_posts/2019-05-22-lab.md
+++ b/_posts/2019-05-22-lab.md
@@ -23,4 +23,5 @@ display_date: 22nd May 2019
 - Address lookup still has issues and needs to be improved
 - Search is not returning partial matches from incomplete strings (Scot should find Scottish)
 
+**Documents**
 [May 22nd Findings (PDF)](../files/SEP_2019_may_22_usability.pdf)
