--- a/_posts/2019-08-02-partner.md
+++ b/_posts/2019-08-02-partner.md
@@ -25,4 +25,5 @@ Workshop to set initial user needs for the partner portal and the enquiry handli
 - Analytics, reporting, Key KPIs, Metric, Audit trails, GA
 - View feedback from customers
 
+**Documents**
 [Partner Prioritisation Spreadsheet (Excel file)](../files/SEP-Partner-Prioritisation-020819-V1.xlsx)
