--- a/_posts/2019-08-12-partner.md
+++ b/_posts/2019-08-12-partner.md
@@ -22,6 +22,6 @@ Refined needs
 Decisions
 - Decision to use Umbraco for service content management
 
-Documents
+**Documents**
 - [Refined prioritised needs for the service content management (Excel file)](../files/SEP-Partner-Portal-User-needs-draft.xlsx)
 - [Initial storymap for enquiry handling (pdf)](../files/Enquiry_Handling-high_level_story_map.pdf)
