--- a/_posts/2019-05-27-other.md
+++ b/_posts/2019-05-27-other.md
@@ -14,5 +14,5 @@ display_date: 27th May 2019
 **Focus**
 - Reason for project and current understanding of direction and progress
 
-
+**Documents**
 [Team overview of SEP](../files/SEP_2019_May_Ambition.pdf)
