--- a/_posts/2019-05-22-lab.md
+++ b/_posts/2019-05-22-lab.md
@@ -24,4 +24,4 @@ display_date: 22nd May 2019
 - Search is not returning partial matches from incomplete strings (Scot should find Scottish)
 
 **Documents**
-[May 22nd Findings (PDF)](../files/SEP_2019_may_22_usability.pdf)
+- [May 22nd Findings (PDF)](../files/SEP_2019_may_22_usability.pdf)
