--- a/_posts/2019-05-8-online.md
+++ b/_posts/2019-05-8-online.md
@@ -24,4 +24,4 @@ display_date: 8th May 2019  # Date to show on the page
 - Eligibility and Costs need to be at top of page
 
 **Documents**
-[May 8th Findings (PDF)](../files/SEP_2019_MAY_8_USABILITY.pdf)
+- [May 8th Findings (PDF)](../files/SEP_2019_MAY_8_USABILITY.pdf)
