--- a/_posts/2019-08-02-partner.md
+++ b/_posts/2019-08-02-partner.md
@@ -26,4 +26,4 @@ Workshop to set initial user needs for the partner portal and the enquiry handli
 - View feedback from customers
 
 **Documents**
-[Partner Prioritisation Spreadsheet (Excel file)](../files/SEP-Partner-Prioritisation-020819-V1.xlsx)
+- [Partner Prioritisation Spreadsheet (Excel file)](../files/SEP-Partner-Prioritisation-020819-V1.xlsx)
