--- a/_posts/2019-05-31-A11Y.md
+++ b/_posts/2019-05-31-A11Y.md
@@ -19,4 +19,4 @@ display_date: 31st May 2019
 - Lots of core usability issues that are accentuated for A11Y audiences
 
 **Documents**
-[May 2019 A11Y fix's (PDF)](../files/SEP_2019_May_31_A11Y.pdf)
+- [May 2019 A11Y fix's (PDF)](../files/SEP_2019_May_31_A11Y.pdf)
