--- a/_posts/2019-10-30-other.md
+++ b/_posts/2019-10-30-other.md
@@ -1,10 +1,10 @@
 ---
 layout: post              # Don't change this from "post"
-title: Lab Research       # Title to show on the page
-type: lab                 # Chose from: lab, online, a11y, other, partner
+title: SEP Customer UAT       # Title to show on the page
+type: other                 # Chose from: lab, online, a11y, other, partner
 phase: beta               # chose from discovery, alpha, beta, live
 initials: mk              # initials of person who did/uploaded the research
-display_date: 22nd May 2019 # Date to show on the page
+display_date: 30th Oct 2019 # Date to show on the page
 ---
 SEP Customer UAT
 **Audience**
