--- a/_posts/2019-09-02-online.md
+++ b/_posts/2019-09-02-online.md
@@ -1,7 +1,7 @@
 ---
 layout: post              # Don't change this from "post"
 title: Lab Research       # Title to show on the page
-type: lab                 # Chose from: lab, online, a11y, other, partner
+type: online                 # Chose from: lab, online, a11y, other, partner
 phase: beta               # chose from discovery, alpha, beta, live
 initials: mk              # initials of person who did/uploaded the research
 display_date: Sep 2019 2019 # Date to show on the page
