--- a/_posts/2019-05-8-online.md
+++ b/_posts/2019-05-8-online.md
@@ -13,6 +13,7 @@ display_date: 8th May 2019  # Date to show on the page
 - Scored on Impressions, navigation, layout, information & general functionality
 - Enquiry Testing
 
+<!--more-->
 
 **Observations**
 - EARLY DAYS AND A BIT OF A KICKING
