--- a/_posts/2019-05-31-A11Y_31st_May.md
+++ b/_posts/2019-05-31-A11Y_31st_May.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: A11Y RESEARCH AND IMPROVEMENTS
+title: A11Y_RESEARCH_AND_IMPROVEMENTS
 type: a11y
 phase: beta
 initials: mk
