--- a/_posts/2019-11-01-other-01-11-2019.md
+++ b/_posts/2019-11-01-other-01-11-2019.md
@@ -5,6 +5,8 @@ type: a11y                 # Chose from: lab, online, a11y, other, partner
 phase: beta               # chose from discovery, alpha, beta, live
 initials: mk              # initials of person who did/uploaded the research
 display_date: 1st Nov 2019 # Date to show on the page
+return_url:
+type_of_event:
 ---
 At Taylor McKenzie - Glasgow - Lab
 **Audience**
