SK add two variable

--- a/_drafts/2019-01-01-template.md
+++ b/_drafts/2019-01-01-template.md
@@ -1,10 +1,15 @@
 ---
-layout: post              # Don't change this from "post"
-title: Lab Research       # Title to show on the page
-type: lab                 # Chose from: lab, online, a11y, other, partner
-phase: beta               # chose from discovery, alpha, beta, live
-initials: mk              # initials of person who did/uploaded the research
+layout: post                # Don't change this from "post"
+title: Lab Research         # Title to show on the page
+type: lab                   # Chose from: lab, online, a11y, other, partner
+phase: beta                 # chose from discovery, alpha, beta, live
+initials: mk                # initials of person who did/uploaded the research
 display_date: 22nd May 2019 # Date to show on the page
+return_url:                 # optional: add an url to go back to the timeline page using "" around it 
+                            # or leave empty if not needed          
+type_of_event:              # add the type of event if you want it displayed added to the heading when the post if clicked on
+                   # Lab Testing, Partner co-creation and co-design, Accessibility, Online research and testing, Events, F2F and testing
+                            # or leave empty if not needed
 ---
 
 **Audience**
