SK - add return url and type of event

--- a/_posts/2019-11-01-other-01-11-2019.md
+++ b/_posts/2019-11-01-other-01-11-2019.md
@@ -5,10 +5,12 @@ type: a11y                 # Chose from: lab, online, a11y, other, partner
 phase: beta               # chose from discovery, alpha, beta, live
 initials: mk              # initials of person who did/uploaded the research
 display_date: 1st Nov 2019 # Date to show on the page
-return_url:
-type_of_event:
+return_url: "https://scotentsd.github.io/sep/timeline/"
+type_of_event: Accessibility testing
 ---
+
 At Taylor McKenzie - Glasgow - Lab
+
 **Audience**
 - 5 SME staff with a variety of Cognitive Issues
 
