SK - remove type of event as it's 'other' also was wrong type initially

--- a/_posts/2019-11-12-ScotExport-12-11-2019.md
+++ b/_posts/2019-11-12-ScotExport-12-11-2019.md
@@ -1,12 +1,12 @@
 ---
 layout: post
 title: Scot Export event 
-type: online
+type: other
 phase: beta
 initials: mk
 display_date: 12th Nov 2019
 return_url: "https://scotentsd.github.io/sep/timeline/"
-type_of_event: Online Research and Testing
+
 ---
 
 **Scot Export Event**
