SK - change file name - add return url - add type of event

--- a/_posts/2019-10-29-lab-29-10-2019.md
+++ b/_posts/2019-10-29-lab-29-10-2019.md
@@ -5,10 +5,12 @@ type: lab                 # Chose from: lab, online, a11y, other, partner
 phase: beta               # chose from discovery, alpha, beta, live
 initials: mk              # initials of person who did/uploaded the research
 display_date: 29th October 2019 # Date to show on the page
+return_url: "https://scotentsd.github.io/sep/timeline/"         
+type_of_event:   Lab Testing
 ---
 
 **Audience**
--
+
 
 **Focus**
 - Customer UAT - End to End testing
@@ -25,4 +27,4 @@ display_date: 29th October 2019 # Date to show on the page
 - Issue: No method for reusing the address/company search after initial use.
 
 **Documents**
-- [ Oct 28th 2019 Findings Report (pdf) ](../files/SEP_2019_Oct_29_CustomerUAT.pdf)
+- [Oct 28th 2019 Findings Report (pdf)](../files/SEP_2019_Oct_29_CustomerUAT.pdf)
