--- a/_posts/2019-10-25-online.md
+++ b/_posts/2019-10-25-online.md
@@ -4,11 +4,13 @@ title: Lab Research       # Title to show on the page
 type: online                 # Chose from: lab, online, a11y, other, partner
 phase: beta               # chose from discovery, alpha, beta, live
 initials: mk              # initials of person who did/uploaded the research
-display_date: 25th Oct 2019 # Date to show on the page
+display_date: 25th Oct 2019 # Date to show on the page4
+return_url: "https://scotentsd.github.io/sep/timeline/"         
+type_of_event:   Online research and testing
 ---
 
 **Audience**
--
+
 
 **Focus**
 - Event Categories
@@ -21,4 +23,4 @@ display_date: 25th Oct 2019 # Date to show on the page
 - Issues around default distance which is now being taken up in ongoing research
 
 **Documents**
-- [ Event Category Testing results (pdf) ](../files/SEP_2019_Oct_25_Event_Category.pdf)
+- [Event Category Testing results (pdf)](../files/SEP_2019_Oct_25_Event_Category.pdf)
