SK - change file name and add 2 variables

--- a/_posts/2019-10-17-online-17-10-2019.md
+++ b/_posts/2019-10-17-online-17-10-2019.md
@@ -1,14 +1,16 @@
 ---
 layout: post              # Don't change this from "post"
-title: Home Page images - Online       # Title to show on the page
+title: Home Page images    # Title to show on the page
 type: online                 # Chose from: lab, online, a11y, other, partner
 phase: beta               # chose from discovery, alpha, beta, live
 initials: mk              # initials of person who did/uploaded the research
 display_date: 17th October 2019 # Date to show on the page
+return_url: "https://scotentsd.github.io/sep/timeline/"         
+type_of_event:    Online research and testing
 ---
 
 **Audience**
--
+
 
 **Focus**
 - Home page images
@@ -20,4 +22,4 @@ display_date: 17th October 2019 # Date to show on the page
 - ps. They are not really that bothered about the grey footer, even though it looks a bit dull
 
 **Documents**
-- [ SEP Homepage Image testing results (pdf) ](../files/SEP2019_oct_17_Images.pdf)
+- [SEP Homepage Image testing results (pdf)](../files/SEP2019_oct_17_Images.pdf)
