--- a/_posts/2019-09-02-online-02-09-2019.md
+++ b/_posts/2019-09-02-online-02-09-2019.md
@@ -4,7 +4,9 @@ title: Lab Research       # Title to show on the page
 type: online                 # Chose from: lab, online, a11y, other, partner
 phase: beta               # chose from discovery, alpha, beta, live
 initials: mk              # initials of person who did/uploaded the research
-display_date: Sep 2019 2019 # Date to show on the page
+display_date: 2nd Sep 2019 # Date to show on the page
+return_url: "https://scotentsd.github.io/sep/timeline/"         
+type_of_event:   Online research and testing
 ---
 **Audience**
 - 15 Unmoderated and 3 Face to Face
