SK - change file name and add return url

--- a/_posts/2019-09-01-online-01-09-2019.md
+++ b/_posts/2019-09-01-online-01-09-2019.md
@@ -1,10 +1,11 @@
 ---
 layout: post              # Don't change this from "post"
 title: Online Research       # Title to show on the page
-type: Online                 # Chose from: lab, online, a11y, other, partner
+type: online                 # Chose from: lab, online, a11y, other, partner
 phase: beta               # chose from discovery, alpha, beta, live
 initials: mk              # initials of person who did/uploaded the research
 display_date: 22nd May 2019 # Date to show on the page
+return_url: "https://scotentsd.github.io/sep/timeline/"         
 ---
 
 **Audience**
