SK - change file name and add return url

--- a/_posts/2019-10-16-online-16-10-2019.md
+++ b/_posts/2019-10-16-online-16-10-2019.md
@@ -4,11 +4,13 @@ title: Lab Research       # Title to show on the page
 type: online                 # Chose from: lab, online, a11y, other, partner
 phase: beta               # chose from discovery, alpha, beta, live
 initials: mk              # initials of person who did/uploaded the research
-display_date: 16-17 October 2019 # Date to show on the page
+display_date: 16-17TH October 2019 # Date to show on the page
+return_url: "https://scotentsd.github.io/sep/timeline/"         
+type_of_event:   Lab Testing, Partner co-creation and co-design, Accessibility, Online research and testing, Events, F2F and testing
 ---
 
 **Audience**
--
+
 
 **Focus**
 - Testing INTERFACE content
