SK - change file name and add return url

--- a/_posts/2019-10-04-a11y-04-10-2019.md
+++ b/_posts/2019-10-04-a11y-04-10-2019.md
@@ -5,6 +5,8 @@ type: a11y                 # Chose from: lab, online, a11y, other, partner
 phase: beta               # chose from discovery, alpha, beta, live
 initials: mk              # initials of person who did/uploaded the research
 display_date: 4th Oct 2019 # Date to show on the page
+return_url: "https://scotentsd.github.io/sep/timeline/"         
+type_of_event:   Accessibility
 ---
 **Audience**
 - Internal & Partner users
