SK - change file name - add return url and type of event

--- a/_posts/2019-09-24-partner-24-09-2019.md
+++ b/_posts/2019-09-24-partner-24-09-2019.md
@@ -5,6 +5,8 @@ type: partner                 # Chose from: lab, online, a11y, other, partner
 phase: beta               # chose from discovery, alpha, beta, live
 initials: mk              # initials of person who did/uploaded the research
 display_date: Week of 24th Sep 2019 # Date to show on the page
+return_url: "https://scotentsd.github.io/sep/timeline/"         
+type_of_event:   Partner co-creation and co-design
 ---
 
 **Audience**
