--- a/_posts/2019-09-17-partner-17-09-2019.md
+++ b/_posts/2019-09-17-partner-17-09-2019.md
@@ -5,10 +5,12 @@ type: partner                 # Chose from: lab, online, a11y, other, partner
 phase: beta               # chose from discovery, alpha, beta, live
 initials: mk              # initials of person who did/uploaded the research
 display_date: 17th Sep 2019 # Date to show on the page
+return_url: "https://scotentsd.github.io/sep/timeline/"         
+type_of_event:   Partner co-creation and co-design
 ---
 
 **Audience**
--
+
 
 **Focus**
 - Presenting the work done so far and sense making with them
@@ -18,8 +20,3 @@ No real new needs, but some confirmed:
 - Need to be able to add custom events
 - Eager to get reports and more insights about who their customers are
 - Want routing to the correct local authority and to be able to cross sell their specific local products
-
-
-
-**Documents**
-- [ Findings ](../files/)
