--- a/_posts/2019-09-10-lab-10-09-2019.md
+++ b/_posts/2019-09-10-lab-10-09-2019.md
@@ -5,6 +5,7 @@ type: lab                 # Chose from: lab, online, a11y, other, partner
 phase: beta               # chose from discovery, alpha, beta, live
 initials: mk              # initials of person who did/uploaded the research
 display_date: 10th Sep 2019 # Date to show on the page
+return_url: "https://scotentsd.github.io/sep/timeline/"         
 ---
 
 **Audience**
