--- a/_posts/2019-08-28-partner-28-08-2019.md
+++ b/_posts/2019-08-28-partner-28-08-2019.md
@@ -5,6 +5,7 @@ type: partner                 # Chose from: lab, online, a11y, other, partner
 phase: beta               # chose from discovery, alpha, beta, live
 initials: mk              # initials of person who did/uploaded the research
 display_date: 28th Aug 2019 # Date to show on the page
+return_url: "https://scotentsd.github.io/sep/timeline/"         
 ---
 
 **Audience**
