SK - change file name and add return url + event type

--- a/_posts/2019-08-12-partner-12-08-2019.md
+++ b/_posts/2019-08-12-partner-12-08-2019.md
@@ -1,10 +1,12 @@
 ---
 layout: post
-title: Lab Research
+title: Workshop
 type: partner
 phase: beta
 initials: mk
 display_date: Week starting Aug 12th 2019
+return_url: "https://scotentsd.github.io/sep/timeline/"         
+type_of_event:   Partner co-creation and co-design
 ---
 
 **AUDIENCE**
