SK - change all caps

--- a/_posts/2019-08-12-partner-12-08-2019.md
+++ b/_posts/2019-08-12-partner-12-08-2019.md
@@ -9,8 +9,8 @@ return_url: "https://scotentsd.github.io/sep/timeline/"
 type_of_event:   Partner co-creation and co-design
 ---
 
-**AUDIENCE**
-- PARTNERS
+**Audience**
+- Partners
 
 **Focus**
 Playback our results for partners portal with the wider team - technical interviews about enquiry handling
