SK - change file name - add return url and type of event

--- a/_posts/2019-08-05-partner-05-08-2019.md
+++ b/_posts/2019-08-05-partner-05-08-2019.md
@@ -1,13 +1,15 @@
 ---
 layout: post
-title: PARTNER WORKSHOP
+title: Workshop
 type: partner
 phase: beta
-initials: mk
+initials: sk
 display_date: Week starting 5th Aug 2019
+return_url: "https://scotentsd.github.io/sep/timeline/"         
+type_of_event:  Partner co-creation and co-design
 ---
-**AUDIENCE**
-- PARTNERS
+**Audience**
+- Partners
 
 **Focus**
 Refine the initial findings from the initial workshop
