SK - change file name - add return url and event type

--- a/_posts/2019-08-02-partner-02-08-2019.md
+++ b/_posts/2019-08-02-partner-02-08-2019.md
@@ -1,13 +1,15 @@
 ---
 layout: post
-title: PARTNERS WORKSHOP 2nd August
+title: Workshop
 type: partner
 phase: beta
-initials: mk
+initials: sk
 display_date: 2nd Aug 2019
+return_url: "https://scotentsd.github.io/sep/timeline/"         
+type_of_event:   Partner co-creation and co-design
 ---
 **Audience**
--Partners
+- Partners
 
 **Focus**
 Workshop to set initial user needs for the partner portal and the enquiry handling
