--- a/_posts/2019-04-18-Initiation-18-04-2019.md
+++ b/_posts/2019-04-18-Initiation-18-04-2019.md
@@ -5,10 +5,9 @@ type: other                   # Chose from: lab, online, a11y, other, partner
 phase: beta                 # chose from discovery, alpha, beta, live
 initials: mk                # initials of person who dod the research OR who uploaded it to this site
 display_date: 18th Apr 2019  # Date to show on the page
+return_url: "https://scotentsd.github.io/sep/timeline/"         
 ---
 
 **SEP Beta phase started on 18th of April 2019**
-
-
 
 <!--more-->
