--- a/_posts/2019-05-27-other-27-05-2019.md
+++ b/_posts/2019-05-27-other-27-05-2019.md
@@ -2,6 +2,7 @@
 layout: post
 title: Presentation of position so far
 phase: beta
+type: other
 initials: mk
 display_date: 27th May 2019
 return_url: "https://scotentsd.github.io/sep/timeline/"         
