SK - update the post about sensemaking session

--- a/_posts/2019-12-03-a11y-03-12-2019.md
+++ b/_posts/2019-12-03-a11y-03-12-2019.md
@@ -6,18 +6,36 @@ phase: beta                 # chose from discovery, alpha, beta, live
 initials: sk                # initials of person who did/uploaded the research
 display_date: 3rd and 4th Dec 2019 # Date to show on the page
 return_url: "https://scotentsd.github.io/sep/timeline/" # leave like this         
-type_of_event:              Accessibility
+type_of_event: Accessibility
 ---
 
 **Audience**
 - 6 participants with various range of access needs: Asperger, Dyslexia, visual stress, registered blind, ADHD. NVDA and JAWS users.
 
 **Focus**
-- will be added
+- Testing SEP with customer experiencing accessibility issues
+- End to End testing
+- feedback links on the service page were not tested
 
 **Observations**
-- will be added
+Top issues - some are not SEP specific
+
+- Use / over use of tooltips
+- Use of list boxes, where users didn’t understand how to interact with them properly
+- The reading order of the listings page on a screen reader (You Search and then……no results. Just lots of Filters).
+- Tabs: how they are used and what happens with the filtering options when changed
+- The business address drop down form (people didn’t know that the manual entry was a selectable option)
+- Terminology: browse support vs browse all support / browse vs search / order of info on the find out more buttons
+- Framing / design of the search and filters to make it clearer what the user is doing
+- Managing the link/jump off to other sites, new pages are opening without warning
+- CTA and next steps links on each details page. People didn’t understand the nuances between them or what the partner website meant
+- All caps letters for buttons (hard to read when dyslexic) 
+
+In addition there were a number of WCAG 2.1 specific issues which were observed. They need to be fixed as well in order to comply with recent legislation on Public Sector Website Accessibility.  
+
 
 **Documents**
-- report from User Vision to come in January - will be added
-- sense making session done on the 11/12/19 with the team, including QA and DEV - outcome to be added soon
+- report from User Vision to come in January ( will be added - not available yet)
+- [sense making session done on the 11/12/19](../files/SEP a11y testing insights -dec2019-after sense making session.pdf) - as slides (PDF)
+- [sense making session done on the 11/12/19](../files/SEP Beta - A11Y testing - sense making 11122019.pdf) - Miro board (PDF)
+
