--- a/_posts/2020-01-13-partners-13-01-2020.md
+++ b/_posts/2020-01-13-partners-13-01-2020.md
@@ -16,7 +16,7 @@ type_of_event:  Partner co-creation and co-design            # add the type of e
 
 **Focus**
 
-To reflect on the work we have done with you these last months on SEP to improve the way we work together
+To reflect on the work we have done with the partners these last months on SEP to improve the way we work together
 -	what worked well
 -	what didn’t
 -	what we should stop/start doing
