SK - remove extra bullet point

--- a/_posts/2019-11-12-ScotExport-12-11-2019.md
+++ b/_posts/2019-11-12-ScotExport-12-11-2019.md
@@ -9,7 +9,7 @@ return_url: "https://scotentsd.github.io/sep/timeline/"
 
 ---
 
-- Nov 12th 2019 at the Glasgow Technology Innovation Centre
+Nov 12th 2019 at the Glasgow Technology Innovation Centre
 
 **Audience**
 - Circa 800 Exporters or people looking to export
