SK - add summary of insight of partners retro

--- a/_posts/2020-01-13-partners-13-01-2020.md
+++ b/_posts/2020-01-13-partners-13-01-2020.md
@@ -22,8 +22,19 @@ To reflect on the work we have done with the partners these last months on SEP t
 -	what we should stop/start doing
 
 
-**Observations**
-- will be added
+**Summary of insights**
+- Playbacks/standups/demos were overwhelmingly positively viewed
+- Partner working was also very positive
+- Can we think of a way to collaborate more? Have regular face to face sessions with partners
+- Workstream approach was broadly positive but we need better communication between workstreams and a clear understanding of their roles
+- User-centred design approach is good but we should make use of existing research from partners
+- We delivered for Beta but we need a shared vision and roadmap for future development
+- The D1 assessment is a good approach and should be embraced as a methodology
+- Transparency could and should be much greater
+- Communication could be much better and we should consider alternative platforms (eg MS Teams)
+- Prioritisation could be improved
+- We should reconsider our delivery model
+- A lack of dedicated resource for the next phase of SEP could be a blocker
 
-**Documents**
-- [ will be added ](../files/)
+
+
