--- a/_posts/2020-05-30-May.md
+++ b/_posts/2020-05-30-May.md
@@ -18,28 +18,16 @@ type_of_event:  Online research and testing
 **Focus**
 
 To test functionality around
-1 Events Filters (16 People)
-2 Covid 19 (14 People)
-3 Services Filter (10 People)
+1
 
 **Summary of insights**
 
-### Events Filters (16 People)
--	Everyone liked the new improved events filter panel layout and the position of different elements.
--	Filter by location and date range were the top 2 elements users would like to use while looking for events.
--	Keyword search took was the least popular option that users would use.
+###
 
-### Covid 19 (14 People)
--	Majority users were okay with them being taken to external websites.
--	The Covid-19 pages were easy to read and understand.
--	Finding Sick pay was okay but can be improved
-
-### Services Filter (10 People)
--	8 out of 10 users would like Sector to be added as a filter type
--	Generally most users were okay with the current filters and had no further suggestions around this
+## Customer Quotes
 
 ## Files
-- [March Services Filter](https://scotentsd.github.io/sep/files/FBS-Services filter testing - March 2020.pptx)
-- [March Covid A](https://scotentsd.github.io/sep/files/FBS-Covid-19-March2020.pptx)
-- [March Covid B](https://scotentsd.github.io/sep/files/FBS-Covid-19-Funding Prototye-April2020.pptx)
-- [March Event Filter](https://scotentsd.github.io/sep/files/FBS-Events improved filters-March 2020.pptx)
+- [April](https://scotentsd.github.io/sep/files/)
+- [April](https://scotentsd.github.io/sep/files/)
+- [April](https://scotentsd.github.io/sep/files/)
+- [April](https://scotentsd.github.io/sep/files/)
