--- a/_posts/2020-03-30-Mar.md
+++ b/_posts/2020-03-30-Mar.md
@@ -18,9 +18,9 @@ type_of_event:  Online research and testing
 **Focus**
 
 To test functionality around
-1 Events Filters (16 People)
-2 Covid 19 (14 People)
-3 Services Filter (10 People)
+1. Events Filters (16 People)
+2. Covid 19 (14 People)
+3. Services Filter (10 People)
 
 **Summary of insights**
 
@@ -39,11 +39,13 @@ To test functionality around
 -	Generally most users were okay with the current filters and had no further suggestions around this
 
 ## Customer Quotes
-' Because when you're looking for events, I don't think that most people would automatically free type search for a particular event so having location up is good.
-' I think it's a very good idea to put the location on the date range further up at the top.
+- Because when you're looking for events, I don't think that most people would automatically free type search for a particular event so having location up is good.
+- I think it's a very good idea to put the location on the date range further up at the top.
+- Easy to find the links to the most important information resources from other sites
+- As a business owner, it provides all the right information i require in a straight tothe point fashion and navigates me to the right places to find that info which is great. As the Gov.uk site can be hard to navigate
+-	I searched for restaurants.  Perhaps travel and hospitality?
+-	No other suggestions, it seems comprehensive
 
-' Easy to find the links to the most important information resources from other sites
-' As a business owner, it provides all the right information i require in a straight to
 
 ## Files
 - [March Services Filter](https://scotentsd.github.io/sep/files/FBS-Services filter testing - March 2020.pptx)
