--- a/_posts/2020-06-30-Jun.md
+++ b/_posts/2020-06-30-Jun.md
@@ -1,10 +1,10 @@
 ---
 layout: post                # Don't change this from "post"
-title: Online testing (March) of Events Filters, Covid 19, Services Filter   # Title to show on the page
+title: Online testing (June) of   # Title to show on the page
 type: online                  # Chose from: lab, online, a11y, other, partner
 phase: beta                 # chose from discovery, alpha, beta, live
 initials: am               # initials of person who did/uploaded the research
-display_date: March 2020 # Date to show on the page
+display_date: June 2020 # Date to show on the page
 return_url: "https://scotentsd.github.io/sep/timeline/" # leave like this         
 type_of_event:  Online research and testing            
             # add the type of event if you want it displayed added to the heading when the post if clicked on
@@ -18,7 +18,7 @@ type_of_event:  Online research and testing
 **Focus**
 
 To test functionality around
-1
+1.
 
 **Summary of insights**
 
@@ -27,7 +27,7 @@ To test functionality around
 ## Customer Quotes
 
 ## Files
-- [April](https://scotentsd.github.io/sep/files/)
-- [April](https://scotentsd.github.io/sep/files/)
-- [April](https://scotentsd.github.io/sep/files/)
-- [April](https://scotentsd.github.io/sep/files/)
+- [June](https://scotentsd.github.io/sep/files/)
+- [June](https://scotentsd.github.io/sep/files/)
+- [June](https://scotentsd.github.io/sep/files/)
+- [June](https://scotentsd.github.io/sep/files/)
