--- a/_posts/2020-04-30-Apr.md
+++ b/_posts/2020-04-30-Apr.md
@@ -17,7 +17,10 @@ type_of_event:  Online research and testing
 
 **Focus**
 To test functionality around
-1. Covid related updates (Wave 1 & 2)
+1. Covid-19 funding prototype (10 users)
+2. Covid-19 advice (11 users)
+3. Covid-19 advice-2nd wave (10 users)
+
 
 **Summary of insights**
 
@@ -47,8 +50,6 @@ To test functionality around
 -	clear and understandable
 -	It provides a wealth of information and anyone would have their questions answered easily
 -	There was a wide variety of information on the page itself and with the individual links it made it very comprehensive
-
-
 
 
 ## Files
