--- a/_posts/2020-05-30-May.md
+++ b/_posts/2020-05-30-May.md
@@ -1,6 +1,6 @@
 ---
 layout: post                # Don't change this from "post"
-title: Online testing (May) of Events Filters, Covid 19, Services Filter   # Title to show on the page
+title: Online testing (May) of    # Title to show on the page
 type: online                  # Chose from: lab, online, a11y, other, partner
 phase: beta                 # chose from discovery, alpha, beta, live
 initials: am               # initials of person who did/uploaded the research
@@ -18,14 +18,47 @@ type_of_event:  Online research and testing
 **Focus**
 
 To test functionality around
-1
+1. Covid-19 support (10 users)
+2. Covid-19 opp, challenges and sectors  (9 users)
+3. Covid-19 ThankYou page (10 users)
+
 
 **Summary of insights**
 
-###
+### Covid
+-	Version 2 was liked by majority of users and below are some comments to support this.
+-	Having the steps to finding out if you are eligible for a grant made version 2 the best one. It was easy on the eye and the steps made applying for a grant seem simple and not time-consuming.
+-	Much better layout - more understandable and informative
+-	More on and seemed more organised and directional
+-	Version 2 is basically made of version 1 with additional information which is very important, this is why I prefer version 2
+-	Majority users felt that the content was easy to read and understand.
+-	The advice pages were easy to navigate.
+-	Suggestions were made for further improvements
+-	Majority users felt that the content was easy to read and understand.
+-	The advice pages were easy to navigate.
+-	Suggestions were made for further improvements
+-	Sources of funding pages also tested well with users being able to navigate and read info easily
+
 
 ## Customer Quotes
+### Covid Support
+•	Having the steps to finding out if you are eligible for a grant made version 2 the best one. It was easy on the eye and the steps made applying for a grant seem simple and not time-consuming.
+•	Much better layout - more understandable and informative
+•	More on and seemed more organised and directional
+•	Version 2 is basically made of version 1 with additional information which is very important, this is why I prefer version 2
+
+### Covid Advice (1st Wave)
+•	Hyperlinks are very useful, as long as they work and are kept up to date
+•	The navigation menus are well placed to point you to where you need to go.
+•	The contents are mostly from external links so it’s quite tricky to navigate back and forth to the source page
+•	clear and understandable
+
+### Covid Advice (2nd Wave)
+•	It provides a wealth of information and anyone would have their questions answered easily
+•	There was a wide variety of information on the page itself and with the individual links it made it very comprehensive
 
 ## Files
+- [May Covid A](https://scotentsd.github.io/sep/files/)
+- [May Covid B](https://scotentsd.github.io/sep/files/)
 - [May Covid A](https://scotentsd.github.io/sep/files/)
 - [May Covid B](https://scotentsd.github.io/sep/files/)
