--- a/_posts/2020-04-30-Apr.md
+++ b/_posts/2020-04-30-Apr.md
@@ -53,5 +53,4 @@ To test functionality around
 
 
 ## Files
-- [April](https://scotentsd.github.io/sep/files/)
-- [April](https://scotentsd.github.io/sep/files/)
+- [April Covid Advice](https://scotentsd.github.io/sep/files/FBS-Covid-19 advice web page-April2020.pptx)
