--- a/_posts/2020-05-30-May.md
+++ b/_posts/2020-05-30-May.md
@@ -57,7 +57,5 @@ To test functionality around
 -	There was a wide variety of information on the page itself and with the individual links it made it very comprehensive
 
 ## Files
-- [May Covid A](https://scotentsd.github.io/sep/files/)
-- [May Covid B](https://scotentsd.github.io/sep/files/)
-- [May Covid A](https://scotentsd.github.io/sep/files/)
-- [May Covid B](https://scotentsd.github.io/sep/files/)
+- [May Covid ThankYou Page](https://scotentsd.github.io/sep/files/FBS-ThankYoupage-May2020.pptx)
+- [May Covid Filters](https://scotentsd.github.io/sep/files/FBS-Website discovery and filters-May2020.pptx)
