--- a/_posts/2020-11-30-Nov.md
+++ b/_posts/2020-11-30-Nov.md
@@ -1,10 +1,10 @@
 ---
 layout: post                # Don't change this from "post"
-title: Online testing (July) of Homepage, Covid 19, Route Map Prototype & Industry Filter  # Title to show on the page
+title: Online testing (November) of Search Prototype  # Title to show on the page
 type: online                  # Chose from: lab, online, a11y, other, partner
 phase: beta                 # chose from discovery, alpha, beta, live
 initials: am               # initials of person who did/uploaded the research
-display_date: July 2020 # Date to show on the page
+display_date: November 2020 # Date to show on the page
 return_url: "https://scotentsd.github.io/sep/timeline/" # leave like this         
 type_of_event:  Online research and testing            
             # add the type of event if you want it displayed added to the heading when the post if clicked on
@@ -18,27 +18,32 @@ type_of_event:  Online research and testing
 ## Focus
 
 To test functionality around
-1. Homepage
-2. Covid 19
-3. Route Map Prototype
-4. Industry Filter
+1. Search Prototype (10)
 
 ## Summary of insights
-### Homepage
--
+### Search Prototype overview
+Two homepage versions were tested against each other
+1. V1 has a search box on the homepage. This loads the Filtered View with Search prepopulated.
+2. V2 has buttons that lead to the Filtered View.
+![Versions](https://scotentsd.github.io/sep/files/Mobile_04.png)
 
-### Covid 19
--
+
+### V1 Comments
+- I think it was more simple and easy to understand
+- Much easier to use.
+- Search bars are very effective, but they need quick filter options to make them fast and effective.
+- The search box was easy to use, but I found the other designs were fine too. I chose the search box because I am more used to using sites with this function.
 
 
-### Route Map Prototype
--
+### V2 Comments
+- Quick filter options give people the opportunity to quickly find the general information they need which will then allow them to search for other related information.
+- Easy to use and good it has brexit and covid as topical filters
+- It is an attractive design and seems pretty easy to navigate.
 
-### Industry Filter
--
+
+
 
 
 ## Files
-- [June Filters](https://scotentsd.github.io/sep/files/FBS-New guidance filter-June 2020.pptx)
-- [June Content Placement](https://scotentsd.github.io/sep/files/FBS-Covid-19-content-placement-June 2020.pptx)
-- [June Enquiries Portal](https://scotentsd.github.io/sep/files/FBS-Enquiries Portal-June 2020.pptx)
+- [November - Homepage testing](https://scotentsd.github.io/sep/files/FBS-Homepage Search Prototye-Nov2020)
+-[Version screenshots (1 & 2)](https://scotentsd.github.io/sep/files/Nov_Versions.png)
