SK add the day as there will be a lot of entries for Jan

--- a/_posts/2021-01-13-Jan.md
+++ b/_posts/2021-01-13-Jan.md
@@ -4,7 +4,7 @@ title: Online testing (January) of opinions about upcoming funding  # Title to s
 type: online                  # Chose from: lab, online, a11y, other, partner
 phase: live                 # chose from discovery, alpha, beta, live
 initials: kd               # initials of person who did/uploaded the research
-display_date: January 2021 # Date to show on the page
+display_date: 13 January 2021 # Date to show on the page
 return_url: "https://scotentsd.github.io/sep/timeline/" # leave like this         
 type_of_event:  Online research and testing            
             # add the type of event if you want it displayed added to the heading when the post if clicked on
