--- a/_posts/2021-03-02-Brexit.md
+++ b/_posts/2021-03-02-Brexit.md
@@ -1,15 +1,16 @@
 ---
 layout: post                # Don't change this from "post"
 title: Top-level menu  # Title to show on the page
-type: lab                 # Chose from: lab, online, a11y, other, partner
-phase: online                 # chose from discovery, alpha, beta, live
+type: online                 # Chose from: lab, online, a11y, other, partner
+phase: live                 # chose from discovery, alpha, beta, live
 initials: kd               # initials of person who did/uploaded the research
 display_date: 2 March 2021 # Date to show on the page
 return_url: "https://scotentsd.github.io/sep/timeline/" # leave like this         
-type_of_event:  Online        
+type_of_event:  Online         
             # add the type of event if you want it displayed added to the heading when the post if clicked on
             # Lab Testing, Partner co-creation and co-design, Accessibility, Online research and testing, Events, F2F and testing
             # or leave empty if not needed
+---
            
 ## Audience
 - Unmoderated testing via UserZoom 50 users
