SK - fix name of file

--- a/_posts/2021-04-28-analytics-04-28.md
+++ b/_posts/2021-04-28-analytics-04-28.md
@@ -26,7 +26,7 @@ Over 56% of pageviews are for ‘browse support’ after visiting the Advice pag
 
 ## What we decided based on this
 - the buttons are at the best place (high on the page) so they are unlikely to get better use elsewhere on the page so we removed them
-- latest updates has been moved up
+- Latest updates has been moved up
 
 
-[Visual for the page (before / after) with stats](/sep/files/FBS-Beta-covid-page-28-april-2021.pdf) (PDF)
+[Visual for the page (before/after) with stats](/sep/files/FBS-Beta-covid-page-28-april-2021.pdf) (PDF)
