--- a/_posts/2021-08-20-lorna.md
+++ b/_posts/2021-08-20-lorna.md
@@ -4,6 +4,9 @@ layout: post
 type: lab
 phase: discovery
 published: false
+initials: lw
+display_date: today
+tltitle: blargh
 ---
 ## Audience and tool used
 - xxxznlaj a
