mk titles changed to tltitle to avoid PROSE>IO ban on editing title
mk

--- a/_posts/2019-05-27-other-27-05-2019.md
+++ b/_posts/2019-05-27-other-27-05-2019.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Presentation of position so far
+tltitle: Presentation of position so far
 phase: beta
 type: other
 initials: mk
