--- a/_posts/2019-05-31-A11Y-31-05-2019.md
+++ b/_posts/2019-05-31-A11Y-31-05-2019.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: A11Y Research and improvements
+tltitle: A11Y Research and improvements
 type: a11y
 phase: beta
 initials: mk
