--- a/_posts/2019-05-8-online-08-05-2019.md
+++ b/_posts/2019-05-8-online-08-05-2019.md
@@ -1,6 +1,6 @@
 ---
 layout: post                # Don't change this from "post"
-title: Online Research    # Title to show on the page
+tltitle: Online Research    # Title to show on the page
 type: online                   # Chose from: lab, online, a11y, other, partner
 phase: beta                 # chose from discovery, alpha, beta, live
 initials: mk                # initials of person who dod the research OR who uploaded it to this site
