--- a/_posts/2019-06-06-A11Y_6th_June.md
+++ b/_posts/2019-06-06-A11Y_6th_June.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: A11Y research and improvements
+tltitle: A11Y research and improvements
 type: a11y
 phase: beta
 initials: mk
