--- a/_posts/2019-12-03-a11y-03-12-2019.md
+++ b/_posts/2019-12-03-a11y-03-12-2019.md
@@ -1,6 +1,6 @@
 ---
 layout: post                # Don't change this from "post"
-title: User Vision testing        # Title to show on the page
+tltitle: User Vision testing        # Title to show on the page
 type: a11y                  # Chose from: lab, online, a11y, other, partner
 phase: beta                 # chose from discovery, alpha, beta, live
 initials: sk                # initials of person who did/uploaded the research
