--- a/_posts/2020-01-13-partners-13-01-2020.md
+++ b/_posts/2020-01-13-partners-13-01-2020.md
@@ -1,6 +1,6 @@
 ---
 layout: post                # Don't change this from "post"
-title: Retrospective with partners  # Title to show on the page
+tltitle: Retrospective with partners  # Title to show on the page
 type: partner                  # Chose from: lab, online, a11y, other, partner
 phase: beta                 # chose from discovery, alpha, beta, live
 initials: sk               # initials of person who did/uploaded the research
