--- a/_posts/2021-03-02-Brexit.md
+++ b/_posts/2021-03-02-Brexit.md
@@ -1,6 +1,6 @@
 ---
 layout: post                # Don't change this from "post"
-title: Top-level menu  # Title to show on the page
+tltitle: Top-level menu  # Title to show on the page
 type: online                 # Chose from: lab, online, a11y, other, partner
 phase: live                 # chose from discovery, alpha, beta, live
 initials: kd               # initials of person who did/uploaded the research
