--- a/_posts/2019-08-28-partner-28-08-2019.md
+++ b/_posts/2019-08-28-partner-28-08-2019.md
@@ -1,6 +1,6 @@
 ---
 layout: post              # Don't change this from "post"
-title: Workshop with partners      # Title to show on the page
+tltitle: Workshop with partners      # Title to show on the page
 type: partner                 # Chose from: lab, online, a11y, other, partner
 phase: beta               # chose from discovery, alpha, beta, live
 initials: mk              # initials of person who did/uploaded the research
