--- a/_posts/2019-09-24-partner-24-09-2019.md
+++ b/_posts/2019-09-24-partner-24-09-2019.md
@@ -1,6 +1,6 @@
 ---
 layout: post              # Don't change this from "post"
-title: New Parners & EFRS Workshop      # Title to show on the page
+tltitle: New Parners & EFRS Workshop      # Title to show on the page
 type: partner                 # Chose from: lab, online, a11y, other, partner
 phase: beta               # chose from discovery, alpha, beta, live
 initials: mk              # initials of person who did/uploaded the research
