--- a/_posts/2019-10-04-a11y-04-10-2019.md
+++ b/_posts/2019-10-04-a11y-04-10-2019.md
@@ -1,6 +1,6 @@
 ---
 layout: post              # Don't change this from "post"
-title: Internal User A11Y research      # Title to show on the page
+tltitle: Internal User A11Y research      # Title to show on the page
 type: a11y                 # Chose from: lab, online, a11y, other, partner
 phase: beta               # chose from discovery, alpha, beta, live
 initials: mk              # initials of person who did/uploaded the research
