--- a/_posts/2019-10-17-online-17-10-2019.md
+++ b/_posts/2019-10-17-online-17-10-2019.md
@@ -1,6 +1,6 @@
 ---
 layout: post              # Don't change this from "post"
-title: Home Page images    # Title to show on the page
+tltitle: Home Page images    # Title to show on the page
 type: online                 # Chose from: lab, online, a11y, other, partner
 phase: beta               # chose from discovery, alpha, beta, live
 initials: mk              # initials of person who did/uploaded the research
