--- a/_posts/2020-03-30-Mar.md
+++ b/_posts/2020-03-30-Mar.md
@@ -1,6 +1,6 @@
 ---
 layout: post                # Don't change this from "post"
-title: Online testing (March) of Events Filters, Covid 19, Services Filter   # Title to show on the page
+tltitle: Online testing (March) of Events Filters, Covid 19, Services Filter   # Title to show on the page
 type: online                  # Chose from: lab, online, a11y, other, partner
 phase: beta                 # chose from discovery, alpha, beta, live
 initials: am               # initials of person who did/uploaded the research
