--- a/_posts/2020-06-30-Jun.md
+++ b/_posts/2020-06-30-Jun.md
@@ -1,6 +1,6 @@
 ---
 layout: post                # Don't change this from "post"
-title: Online testing (June) of Filters, Content Placement, Enquiries Portal  # Title to show on the page
+tltitle: Online testing (June) of Filters, Content Placement, Enquiries Portal  # Title to show on the page
 type: online                  # Chose from: lab, online, a11y, other, partner
 phase: beta                 # chose from discovery, alpha, beta, live
 initials: am               # initials of person who did/uploaded the research
