--- a/_posts/2020-07-30-July.md
+++ b/_posts/2020-07-30-July.md
@@ -1,6 +1,6 @@
 ---
 layout: post                # Don't change this from "post"
-title: Online testing (July) of Homepage, Covid 19, Route Map Prototype & Industry Filter  # Title to show on the page
+tltitle: Online testing (July) of Homepage, Covid 19, Route Map Prototype & Industry Filter  # Title to show on the page
 type: online                  # Chose from: lab, online, a11y, other, partner
 phase: beta                 # chose from discovery, alpha, beta, live
 initials: am               # initials of person who did/uploaded the research
