--- a/_posts/2021-01-20-Jan.md
+++ b/_posts/2021-01-20-Jan.md
@@ -1,6 +1,6 @@
 ---
 layout: post                # Don't change this from "post"
-title: Online testing (January) of Coronavirus advice page layout   # Title to show on the page
+tltitle: Online testing (January) of Coronavirus advice page layout   # Title to show on the page
 type: online                  # Chose from: lab, online, a11y, other, partner
 phase: live                 # chose from discovery, alpha, beta, live
 initials: kd               # initials of person who did/uploaded the research
