--- a/_posts/2021-01-21-analytics-21-01.md
+++ b/_posts/2021-01-21-analytics-21-01.md
@@ -1,6 +1,6 @@
 ---
 layout: post                # Don't change this from "post"
-title: Analytics on the COVID page links  # Title to show on the page
+tltitle: Analytics on the COVID page links  # Title to show on the page
 type: other                 # Chose from: lab, online, a11y, other, partner
 phase: live                 # chose from discovery, alpha, beta, live
 initials: sd               # initials of person who did/uploaded the research
