--- a/_posts/2021-04-28-analytics-04-28.md
+++ b/_posts/2021-04-28-analytics-04-28.md
@@ -1,6 +1,6 @@
 ---
 layout: post                # Don't change this from "post"
-title: Changes on the Covid page  # Title to show on the page
+tltitle: Changes on the Covid page  # Title to show on the page
 type: other                # Chose from: lab, online, a11y, other, partner
 phase: live                 # chose from discovery, alpha, beta, live
 initials: sk               # initials of person who did/uploaded the research
